--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "file-loader": "^6.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "save-dev": "^0.0.1-security",
+    "url-loader": "^4.1.1"
   }
 }
