figuring out how to put a form so the user can be able to search for recipes in details

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
   ],
   "rules": {
     "react/prop-types": 0,
-    "react/react-in-jsx-scope": 0
+    "react/react-in-jsx-scope": 0,
+    "jsx-a11y/anchor-is-valid": "off"
   },
   "plugins": ["react", "import", "jsx-a11y"],
   "parserOptions": {
