--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "file-loader": "^6.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.2",
     "save-dev": "^0.0.1-security",
     "url-loader": "^4.1.1"
   }
